src/objects/FAM__Asset_Sub_Group__c.object
<CustomObject>
    <customHelpPage>FAM__AssetSubGroupHelp</customHelpPage>
    <description>Contains a further grouping of assets. For example, If you have the asset group information technology, you might create asset sub groups of printers, copiers, employee computing and enterprise computing. Asset sub groups along with asset groups determine the appropriate general ledger account, sub account or dimension to use in the general ledger.</description>
    <fields>
        <fullName>Accumulated_Depreciation_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the account to use to reduce the value of the asset on the balance sheet. This field works the same way as the corresponding field on the asset and is used when the field in the asset is empty.</description>
        <inlineHelpText>Lookup to the account to use to reduce the value of the asset on the balance sheet. This field works the same way as the corresponding field on the asset and is used when the field in the asset is empty.</inlineHelpText>
        <label>Accumulated Depreciation GL Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Asset Sub-Groups (Accumulated Depreciation GL Account)</relationshipLabel>
        <relationshipName>Asset_Sub_Groups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Depreciation_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the account to which depreciation is to be charged for the profit and loss account. This field works the same way as the corresponding field on the asset and is used when the field in the asset is empty.</description>
        <inlineHelpText>Lookup to the account to which depreciation is to be charged for the profit and loss account. This field works the same way as the corresponding field on the asset and is used when the field in the asset is empty.</inlineHelpText>
        <label>Depreciation GL Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Asset Sub-Groups</relationshipLabel>
        <relationshipName>Asset_Sub_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAM__Asset_Group__c</fullName>
        <description>Asset group associated with this sub-group.</description>
        <inlineHelpText>Asset group associated with this sub-group.</inlineHelpText>
        <label>Asset Group</label>
        <referenceTo>FAM__Asset_Group__c</referenceTo>
        <relationshipLabel>Asset Sub-Groups</relationshipLabel>
        <relationshipName>Asset_Sub_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fixed_Asset_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the account to be debited when the asset is acquired and credited when the asset is disposed of. This field works the same way as the corresponding field on the asset and is used when the field in the asset is empty.</description>
        <inlineHelpText>Lookup to the account to be debited when the asset is acquired and credited when the asset is disposed of. This field works the same way as the corresponding field on the asset and is used when the field in the asset is empty.</inlineHelpText>
        <label>Fixed Asset GL Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Asset Sub-Groups (Fixed Asset GL Account)</relationshipLabel>
        <relationshipName>Asset_Sub_Groups2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PNL_On_Asset_Disposal_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the account to be debited when an asset is disposed of to write-off its remaining value. This field works the same way as the corresponding field on the asset and is used when the field in the asset is empty.</description>
        <inlineHelpText>Lookup to the account to be debited when an asset is disposed of to write-off its remaining value. This field works the same way as the corresponding field on the asset and is used when the field in the asset is empty.</inlineHelpText>
        <label>Asset Disposal Profit and Loss GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Asset Sub-Groups (PNL GL Account)</relationshipLabel>
        <relationshipName>Asset_Sub_Groups4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the account to be credited when the asset is acquired. This field works the same way as the corresponding field on the asset and is used when the field in the asset is empty.</description>
        <inlineHelpText>Lookup to the account to be credited when the asset is acquired. This field works the same way as the corresponding field on the asset and is used when the field in the asset is empty.</inlineHelpText>
        <label>Payment GL Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Asset Sub-Groups (Payment GL Account)</relationshipLabel>
        <relationshipName>Asset_Sub_Groups3</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Asset Sub-Group</label>
    <listViews>
        <fullName>FAM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Asset Sub-Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Sub-Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>